--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">OffRecord</string>
     <string name="action_settings">Settings</string>
+    <string name="delete_everything">DelEverything</string>
     <string name="password_validation_file">password_validation</string>
 </resources>
